[package]
name = "get-random-const"
version = "2.0.0"
authors = ["Douman <douman@gmx.se>"]
description = "Simple compile-time random generator"
readme = "README.md"
repository = "https://github.com/DoumanAsh/get-random-const"
documentation = "https://docs.rs/get-random-const/"
license = "BSL-1.0"
keywords = ["parser", "random", "compile-time", "macro"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
getrandom = "0"
