[package]
name = "get-random-const"
version = "2.1.0"
authors = ["Douman <douman@gmx.se>"]
description = "Simple compile-time random generator"
readme = "README.md"
repository = "https://github.com/DoumanAsh/get-random-const"
documentation = "https://docs.rs/get-random-const/"
license = "BSL-1.0"
keywords = ["parser", "random", "compile-time", "macro"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
edition = "2021"
rust-version = "1.63"

[lib]
proc-macro = true

[dependencies]
getrandom = "0.3"
